test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-data-sync-delete-rule
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: multiple-gens
  namespace: pol-data-sync-delete-rule
spec:
  generateExisting: false
  rules:
  - name: k-kafka-address
    match:
      any:
      - resources:
          kinds:
          - Secret
          names:
          - trigger-secret
    generate:
      synchronize: true
      apiVersion: v1
      kind: ConfigMap
      name: zk-kafka-address
      namespace: pol-data-sync-delete-rule
      data:
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
        data:
          ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
          KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
  - name: super-configmap
    match:
      any:
      - resources:
          kinds:
          - Secret
          names:
          - trigger-secret
    generate:
      synchronize: true
      apiVersion: v1
      kind: ConfigMap
      name: superconfigmap
      namespace: pol-data-sync-delete-rule
      data:
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
        data:
          key: superconfigmap
