test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/chainsaw-step-01-apply-1-2.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: multiple-gens
  namespace: pol-data-sync-delete-rule
spec:
  rules:
  - generate:
      generateExisting: false
      apiVersion: v1
      data:
        data:
          KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
          ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
      kind: ConfigMap
      name: zk-kafka-address
      namespace: pol-data-sync-delete-rule
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Secret
          names:
          - trigger-secret
    name: k-kafka-address
  - generate:
      apiVersion: v1
      data:
        data:
          key: superconfigmap
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
      kind: ConfigMap
      name: superconfigmap
      namespace: pol-data-sync-delete-rule
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Secret
          names:
          - trigger-secret
    name: super-configmap
