test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/configmap-remain.yaml
apiVersion: v1
data:
  key: superconfigmap
kind: ConfigMap
metadata:
  labels:
    somekey: somevalue
  name: superconfigmap
  namespace: pol-data-sync-delete-rule
