test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/policy-2.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: multiple-gens
  namespace: pol-data-sync-delete-rule
spec:
  rules:
  - generate:
      generateExisting: false
      apiVersion: v1
      data:
        data:
          key: superconfigmap
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
      kind: ConfigMap
      name: superconfigmap
      namespace: pol-data-sync-delete-rule
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Secret
          names:
          - trigger-secret
    name: super-configmap
