test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/04-assert.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: multiple-gens
  namespace: pol-data-sync-delete-rule
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
