test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/06-checks.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: checks
spec:
  timeouts: {}
  try:
  - assert:
      file: configmap-remain.yaml
  - error:
      file: configmap.yaml
