test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-delete-rule/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-sync-delete-rule
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: multiple-gens
        - name: namespace
          value: pol-data-sync-delete-rule
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: step-03
    try:
    - assert:
        file: configmap.yaml
    - assert:
        file: configmap-remain.yaml
  - name: update policy
    use:
      template: ../../../../../../_step-templates/update-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-2.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: multiple-gens
        - name: namespace
          value: pol-data-sync-delete-rule
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - assert:
        file: configmap-remain.yaml
    - error:
        file: configmap.yaml
